# eo-data-embedding

./: .coveragerc  .dockerignore  .editorconfig  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cpu  LICENSE  Makefile  README.md  SECURITY.md  bandit.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt
.github/workflows/: ci.yml  docs.yml  release.yml
colab/: change_probe.ipynb
compliance/: README.md  gap-analysis.md  software-development-plan.md
compliance/drd/: icd-interface-control.md  risk-register.md  sdd-software-design.md  spa-plan.md  srf-software-reuse-file.md  srs-software-requirements.md  vv-plan.md  vv-report.md
compliance/traceability/: traceability-matrix.md
configs/: default.yaml
configs/clay/: .gitkeep
docs/: PROJECT_PLAN.md  SCALING.md  cidl.md  conf.py  contributing.md  icd.md  index.md  index.rst  license.md  scf.md  sim.md  srf.md  srn.md  suitr.rst
docs/_templates/: help-feedback.html  test_report_template.txt
docs/dpm/: breakpoints.md  context.md  conventions.md  index.rst  introduction.md  module-a.md  module-b.md  parameters-data-list.md
docs/sdd/: design.md  djf.md  future-work.md  index.rst  introduction.md  overview.md  traceability.md
docs/sum/: analytical-index.md  conventions.md  external-view.md  index.rst  introduction.md  operations-basics.md  operations-environment.md  operations-manual.md  purpose.md  reference-manual.md  tutorials.md
docs/sum/notebooks/: index.rst  my_processor_notebook.ipynb
eo_data_embedding/: __init__.py  baseline.py  change.py  cli.py  demo.py  embed.py  probe.py  search.py
gcp/: README.md  run_change_probe.sh
kaggle/: README.md  dataset-metadata.json  kernel-metadata.json  push.sh  run_change_probe.py  run_retrieval.py
research/: 01-datasets.md  02-foundation-models.md  03-phase0-decisions.md  04-clay-integration.md  05-crossmodal.md  06-change-analysis.md  07-engineering-notes.md  README.md
scripts/: build_demo_bundle.py  diag_change.py  fetch_oscd.py  phase0_sanity.py  phase0_smoke.py  phase1_clay_smoke.py  phase1_extract.py  phase2_search.py  phase3_cnn_baseline.py  phase3_probe.py  phase4_app.py  phase5_change.py  phase5b_change_probe.py  phase6_crossmodal.py
src/eo_data_embedding/: __init__.py  change.py  demo.py  log.py  probe.py  search.py
src/geo_embed_eo/: __init__.py  baseline.py  change.py  clay_metadata.py  config.py  data.py  embed.py  probe.py  search.py  store.py
tests/: __init__.py  conftest.py  dask-test.ipynb  test_baseline.py  test_change.py  test_clay_metadata.py  test_config.py  test_embed.py  test_probe.py  test_search.py  test_store.py
tests/it/: __init__.py  test_smoke.py
tests/ut/: __init__.py  test_baseline.py  test_change.py  test_embed.py  test_phase0_smoke.py  test_probe.py  test_search.py  test_store.py
