[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-embed-eo"
version = "0.1.0"
description = "Multi-modal geospatial embedding search & change detection on a ViT foundation model"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Can Deniz Kaya" }]
dynamic = ["dependencies"]

[project.optional-dependencies]
# Lint + test toolchain. Note: `dependencies` is dynamic from requirements.txt, so any
# `pip install -e .` (CI included) installs the full stack on top of this.
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "pre-commit>=3.7",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not slow'"
markers = ["slow: end-to-end phase scripts (deselected by default; run with `pytest -m slow`)"]

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["docs", "artifacts", "data"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E741"]  # ambiguous var names (e.g. l) are fine in small numeric code

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]  # scripts intentionally import after the module docstring/argparse setup
"tests/*" = ["S101"]    # asserts are expected in tests
